<resources>
    <string name="app_name">My 2048 Game</string>
    <string name="menu_title">Kejikus\' 2048 Game</string>
    <string name="copyright">©kejikus, 2021 <br />https://github.com/Kejikus</string>
    <string name="play_button">Play</string>
    <string name="settings_button">Settings</string>
    <string name="about_button">About</string>
    <string name="title_activity_game">FullscreenActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>