<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:fitsSystemWindows="false"
    android:orientation="vertical"
    tools:context=".MainMenuActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->

    <TextView
        android:id="@+id/menu_title"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="?attr/colorPrimary"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:keepScreenOn="true"
        android:text="@string/menu_title"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/button_layout"
        android:layout_width="301dp"
        android:layout_height="310dp"
        app:layout_constraintBottom_toTopOf="@+id/copyright"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_title">

        <Button
            android:id="@+id/play_button"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:text="@string/play_button"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/settings_button"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:text="@string/settings_button"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/play_button" />

        <Button
            android:id="@+id/about_button"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:text="@string/about_button"
            android:textSize="25sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/copyright"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="?attr/colorPrimary"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/copyright"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>